<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tools</string>
    <string name="ok">OK</string>
    <string name="cancle">Cancle</string>
    <string name="action_settings">Settings</string>
    <string name="phone_attribution">Phone Numbers</string>
    <string name="phone_information">Phone Information...</string>
    <string name="numbers_attribution">Phone Numbers Attribution</string>
    <string name="idcard">ID Card Query</string>
    <string name="goods_price">Goods Price</string>
    <string name="tv_query_number_attribution">Query Number Attribution</string>
    <string name="tv_query_idcard">Query IDCard Information</string>
    <string name="input_idcard_number">Input IDCard Number...</string>
    <string name="idcard_information">IDCard Information...</string>
    <string name="translation">Translation</string>
    <string name="socket">Socket Debug</string>
    <string name="bomber">Hacker Bomber</string>
    <string name="express_query">Express Query</string>
    <string name="robot_chat">Robot Chat</string>
    <string name="express_num">Num:</string>
    <string name="express_name">Name:</string>
    <string name="express_query_result">Express Query Result...</string>
    <string name="home">Home</string>
    <string name="other">Other</string>
    <string name="btn_tranlate">Tranlate</string>
    <string name="translate_text_hint">Please enter the text to be translated...</string>
    <string name="result_text_hint">Results text translation...</string>
    <string name="sweep">Sweep</string>
    <string name="generate_qrcode">Generate Qrcode</string>
    <string name="tv_input_qrcodetext">Please input a string:</string>
    <string name="et_input_qrcodetext_hint">String...</string>
    <string name="qrcode_size">Qrcode Size:</string>
    <string name="sweep_result">Sweep Result:</string>
    <string name="tips">Tips:</string>
    <string name="save_name">Save Name:</string>
    <string name="qrcode_save_hint">Qrcode Save Name...</string>
    <string name="save_format">Format:</string>
    <string name="save_activity_label">Save Qrcode</string>
    <string name="sweep_result_tips">1.Long press to copy text.\n</string>
    <string name="string_help">
        1.Query phone number attribution.\n\n2.Get the system time (Long press time to copy time).
    </string>
    
    <string name="add_goods_detail_title">Add Goods</string>
    <string name="edit_goods_detail_title">Edit Goods</string>
    <string name="goods_name_tv">Name:</string>
    <string name="goods_barcode_tv">Barcode:</string>
    <string name="supermarket_name_tv">SuperMarket</string>
    <string name="supermarket1_name_et_hint">Market Name</string>
    <string name="supermarket2_name_et_hint">Market Name</string>
    <string name="supermarket3_name_et_hint">Market Name</string>
    <string name="price_tv">Price</string>
    <string name="price1_et_hint">Price one</string>
    <string name="price2_et_hint">Price two</string>
    <string name="price3_et_hint">Price three</string>
    <string name="info_tv">Goods Info:</string>
    
    <string name="bomber_phone">Bomber Phone</string>
    <string name="bomber_number">Bomber Number</string>
    <string name="bomber_start">Bomber Start</string>
    
    
    <string name="exit_applicataion">Are you sure?</string>
    
    <string name="layout_show_text">Show</string>
    <string name="layout_hide_text">Hide</string>
    <string name="layout_yes_text">Yes</string>
    <string name="layout_no_text">No</string>
    <string name="switch_is_show_quit_window">Show Exit Window ?</string>
    
    <string name="display_setting_tip">Display Settings</string>

</resources>
