<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="20dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_query_number_attribution" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/holo_blue_light" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_PhoneAttribution"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/iv_Contact"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/contact" />

        <EditText
            android:id="@+id/et_PhoneNumbers"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:hint="@string/phone_attribution"
            android:inputType="phone" />

        <ImageButton
            android:id="@+id/ib_QueryPhone"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@android:color/transparent"
            android:scaleType="fitXY"
            android:src="@drawable/search" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/tv_PhoneInformation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/phone_information" />
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="10dp" >

        <Button
            android:id="@+id/btn_QueryPhoneCancle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/button_shap"
            android:text="@string/cancle" />
    </RelativeLayout>

</LinearLayout>