<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/sub_layout_top" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="50dip"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/express_num"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_QueryExpressNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/express_query"
                android:inputType="number" />

            <ImageButton
                android:id="@+id/ib_QueryExpress_GetNum"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:background="@android:color/transparent"
                android:scaleType="fitXY"
                android:src="@drawable/express_2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="50dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/express_name"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/sp_ExpressName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/ib_QueryExpress"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:scaleType="fitXY"
                android:src="@drawable/search" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/tv_ExpressQueryResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/express_query_result" />
    </ScrollView>

</LinearLayout>